     - Fix TOCTOU issues (the player lock is exposed)
 * New mediatree and mediasource (vlc_media_source.h)
     - Browse local network and service discoveries
 * New playlist (vlc_playlist.h)
     - Replace the previous one
     - Flat, new random implementation
     - Can't browse anymore (cf. mediatree)
 * Add support for dual subtitles selection (via the player)

Audio output:
 * ALSA: HDMI passthrough support.
   Use --alsa-passthrough to configure S/PDIF or HDMI passthrough.
 * Remove the DirectSound plugin (API obsolete after Windows 7)

Demuxer:
 * Support for HEIF image and grid image formats
 * Support for DASH WebM
 * Support for DVBSUB in mkv
 * Support for DAV video files
 * Improved Bluray menus, clips and stream selection
 * Support chapters in mp3 files
 * Support for DMX audio music (MUS) files

Codecs:
 * Support for experimental AV1 video encoding
 * WebVTT encoder
 * Remove iomx support for Android
 * WebP image decoding
 * Support for SMPTE-TT image profile
 * Support for 16-bit greyscale
 * Support IMM4 decoder
 * Improve 708 decoder
 * Support AGM decoder
 * Support VP4 decoder
 * Add NVDEC hardware decoder
 * Remove SDL_image support

Access:
 * Enable SMB2 / SMB3 support on mobile ports with libsmb2
 * Added support for the RIST (Reliable Internet Stream Transport) Protocol
 * Added support for the AMT (Automatic Multicast Tunneling) Protocol
 * Added support for the Gopher Protocol
 * Added avaudiocapture module as a replacement for qtsound, which is removed now
 * Audio CD data tracks are now correctly detected and skipped
 * Deprecates Audio CD CDDB lookups in favor of more accurate Musicbrainz
 * Improved CD-TEXT and added Shift-JIS encoding support
 * Support for YoutubeDL (where available).

Access output:
 * Added support for the RIST (Reliable Internet Stream Transport) Protocol
 * Added support for HTTP PUT (HTTP upload)

Video output:
 * Added X11 RENDER video output plugin
 * Remove aa plugin
 * Remove evas plugin